--- a/src/styles/settings/tooltips.css
+++ b/src/styles/settings/tooltips.css
@@ -7,7 +7,7 @@ aside span {
 }
 
 aside h2 {
-	font-weight: 400;
+	font-weight: 450;
 	font-size: 1em;
 }
 
